--- a/packages/core/scss/theme/legacy-classic-dark/_index.scss
+++ b/packages/core/scss/theme/legacy-classic-dark/_index.scss
@@ -15,3 +15,9 @@
 @import "./borderWidth";
 @import "./border";
 @import "./letterSpacing";
+
+:root {
+  .theme-legacy-classic-dark {
+    --ix-theme-name: legacy-classic-dark;
+  }
+}
