--- a/packages/core/src/components/content/content.scss
+++ b/packages/core/src/components/content/content.scss
@@ -6,16 +6,28 @@
  * This source code is licensed under the MIT license found in the
  * LICENSE file in the root directory of this source tree.
  */
+@import 'mixins/shadow-dom/component';
 
 :host {
-  display: block;
+  @include ix-component;
+  display: flex;
+  flex-direction: column;
   position: relative;
-  padding: 1.5rem 2rem;
+  padding: 1.5rem 0rem 0.25rem 2rem;
 
   width: 100%;
   height: 100%;
 
-  ::slotted(ix-content-header) {
-    margin-bottom: 1.5rem;
+  overflow: hidden;
+
+  .content {
+    flex-grow: 1;
+    overflow: auto;
+    padding-right: 1.5rem;
+  }
+
+  .content-header.slotted {
+    margin-bottom: 1rem;
+    padding-right: 1.5rem;
   }
 }
