--- a/packages/core/scss/mixins/shadow-dom/_component.scss
+++ b/packages/core/scss/mixins/shadow-dom/_component.scss
@@ -6,10 +6,14 @@
  * This source code is licensed under the MIT license found in the
  * LICENSE file in the root directory of this source tree.
  */
+@import 'mixins/scrollbar';
+
 @mixin ix-component() {
   *,
   *::after,
   *::before {
     box-sizing: border-box;
   }
+
+  @include scrollbar();
 }
