--- a/packages/core/scss/theme/classic-light/_index.scss
+++ b/packages/core/scss/theme/classic-light/_index.scss
@@ -15,3 +15,9 @@
 @import "./borderWidth";
 @import "./border";
 @import "./letterSpacing";
+
+:root {
+  .theme-classic-light {
+    --ix-theme-name: classic-light;
+  }
+}
