--- a/packages/core/src/components/application-header/application-header.scss
+++ b/packages/core/src/components/application-header/application-header.scss
@@ -13,6 +13,7 @@
   position: relative;
   width: 100%;
   height: 2.75rem;
+  min-height: 2.75rem;
   padding-left: 1rem;
 
   color: var(--theme-app-header--color);
