fix: prevent keyboard navigation

--- a/packages/core/src/components/menu-item/menu-item.scss
+++ b/packages/core/src/components/menu-item/menu-item.scss
@@ -110,7 +110,7 @@ $menuItemPadding: 0.875rem;
   pointer-events: none;
   cursor: default;
 
-  .tab > .glyph {
+  .tab > .tab-icon {
     color: var(--theme-color-weak-text);
   }
 
