--- a/packages/core/src/components/menu-about/menu-about.scss
+++ b/packages/core/src/components/menu-about/menu-about.scss
@@ -29,12 +29,12 @@
 
     h2 {
       color: var(--theme-nav-overlay-header--color);
-      margin-bottom: 0;
+      margin-bottom: 1rem;
     }
   }
 
-  .about-tabs {
-    margin-bottom: $large-space;
+  ix-tabs {
+    margin-bottom: 1.5rem;
   }
 
   ix-menu-about-item {
