--- a/packages/core/src/components/tab-item/tab-item.scss
+++ b/packages/core/src/components/tab-item/tab-item.scss
@@ -18,7 +18,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 40px;
+  // height: 40px;
   padding: 10px $large-space;
   line-height: 20px;
   font-size: 14px;
