--- a/packages/core/src/components/menu-category/menu-category.scss
+++ b/packages/core/src/components/menu-category/menu-category.scss
@@ -37,6 +37,7 @@
     overflow: hidden;
     max-height: 0px;
     transition: var(--theme-default-time) max-height ease-in-out;
+    padding: 0.25rem 0 0.25rem 1.625rem;
   }
 
   .menu-items--expanded {
