feat(core): application frame enhancement (#735)

--- a/packages/core/scss/theme/classic-dark/_index.scss
+++ b/packages/core/scss/theme/classic-dark/_index.scss
@@ -15,3 +15,9 @@
 @import "./borderWidth";
 @import "./border";
 @import "./letterSpacing";
+
+:root {
+  .theme-classic-dark {
+    --ix-theme-name: classic-dark;
+  }
+}
