--- a/packages/react-test-app/src/preview-examples/theme-switcher.css
+++ b/packages/react-test-app/src/preview-examples/theme-switcher.css
@@ -6,14 +6,7 @@
  * This source code is licensed under the MIT license found in the
  * LICENSE file in the root directory of this source tree.
  */
-@import 'mixins/scrollbar';
-
-@mixin ix-component() {
-  *,
-  *::after,
-  *::before {
-    box-sizing: border-box;
-  }
-
-  @include scrollbar();
+.ThemeSwitcher ix-col {
+  align-items: center;
+  height: 2.5rem;
 }
