--- a/packages/core/src/components/grid/grid.scss
+++ b/packages/core/src/components/grid/grid.scss
@@ -15,22 +15,15 @@
 
   padding-left: calc(var(--ix-grid-gutter) * 0.5);
   padding-right: calc(var(--ix-grid-gutter) * 0.5);
+
+  --ix-grid-row-margin: 1rem;
 }
 
-:host(.fluid) {
+:host(.no-padding) {
   padding-left: 0;
   padding-right: 0;
 }
 
-:host(.fixed-sm) {
-  max-width: 33.75rem;
-}
-
-:host(.fixed-md),
-:host(.fixed) {
-  max-width: 45rem;
-}
-
-:host(.fixed-lg) {
-  max-width: 60rem;
+:host(.no-row-gap) {
+  --ix-grid-row-margin: 0rem;
 }
