--- a/packages/core/src/components/blind/blind.scss
+++ b/packages/core/src/components/blind/blind.scss
@@ -46,6 +46,21 @@
       padding: $tiny-space $small-space;
     }
 
+    ix-typography,
+    .blind-header-title-label,
+    .blind-header-title-sublabel {
+      @include ellipsis;
+      flex-grow: 1;
+    }
+
+    .blind-header-title-label {
+      padding-inline-end: 0.5rem;
+    }
+
+    .blind-header-title-sublabel {
+      padding-inline: 0.5rem;
+    }
+
     .blind-header-title,
     .blind-header-title-basic {
       @include ellipsis;
