--- a/packages/core/src/components/col/col.scss
+++ b/packages/core/src/components/col/col.scss
@@ -19,6 +19,6 @@
   max-width: 100%;
   min-height: 1px;
 
-  padding-left: calc(var(--ix-grid-gutter) * 0.5);
-  padding-right: calc(var(--ix-grid-gutter) * 0.5);
+  padding-left: calc(var(--ix-layout-grid-gutter) * 0.5);
+  padding-right: calc(var(--ix-layout-grid-gutter) * 0.5);
 }
