--- a/packages/core/src/components/card-title/card-title.scss
+++ b/packages/core/src/components/card-title/card-title.scss
@@ -5,7 +5,7 @@
   position: relative;
   flex-direction: row;
   align-items: center;
-  padding: 0px;
+  margin-top: 0.25rem;
   margin-bottom: $small-space;
   gap: $default-space;
 
