--- a/packages/core/src/components/datetime-picker/datetime-picker.scss
+++ b/packages/core/src/components/datetime-picker/datetime-picker.scss
@@ -19,7 +19,7 @@
   position: relative;
   width: 32.6875rem;
 
-  .date-picker-override {
+  .border-override {
     border: none !important;
     box-shadow: none !important;
   }
