--- a/packages/core/src/components/time-picker/time-picker.scss
+++ b/packages/core/src/components/time-picker/time-picker.scss
@@ -16,6 +16,10 @@
 
   @import 'legacy/components/forms';
 
+  box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.1), 0 4px 8px 0 rgba(0, 0, 0, 0.1),
+    0 12px 18px 0px rgba(0, 0, 0, 0.1);
+  border: 1px solid var(--theme-menu--border-color);
+
   .header {
     display: flex;
     align-items: center;
