--- a/packages/core/src/components/breadcrumb-item/breadcrumb-item.scss
+++ b/packages/core/src/components/breadcrumb-item/breadcrumb-item.scss
@@ -40,6 +40,7 @@
     margin-left: 0.5rem;
     margin-right: 0rem;
     --theme-color-std-text: var(--theme-color-soft-text);
+    --ix-icon-color: var(--theme-color-std-text);
   }
 
   ::slotted(a[href]) {
