--- a/packages/core/src/components/blind/blind.scss
+++ b/packages/core/src/components/blind/blind.scss
@@ -12,10 +12,51 @@
 @import 'mixins/hover';
 @import 'mixins/text-truncation';
 
+@mixin blind($variant: 'insight') {
+  :host(.blind-#{$variant}) {
+    .blind-header {
+      @if $variant == 'outline' {
+        background-color: var(--theme-color-ghost);
+      } @else {
+        background-color: var(--theme-color-#{$variant});
+      }
+
+      @if $variant == 'insight' or $variant == 'outline' {
+        .blind-header-title-label {
+          color: var(--theme-color-std-text);
+        }
+        .blind-header-title-sublabel {
+          color: var(--theme-color-soft-text);
+        }
+
+        @include ghost-hover-pressed;
+      } @else {
+        .blind-header-title-label,
+        .blind-header-title-sublabel {
+          color: var(--theme-color-#{$variant}--contrast);
+        }
+
+        @include hover {
+          background-color: var(--theme-color-#{$variant}--hover);
+        }
+
+        @include active {
+          background-color: var(--theme-color-#{$variant}--active);
+        }
+      }
+    }
+
+    @if $variant == 'outline' {
+      border-color: var(--theme-color-soft-bdr);
+    } @else {
+      background-color: var(--theme-blind-base--background);
+    }
+  }
+}
+
 :host {
   display: flex;
   flex-direction: column;
-  background-color: var(--theme-blind-base--background);
   border: solid var(--theme-blind--border-thickness)
     var(--theme-blind-base--border-color);
   border-radius: var(--theme-blind--border-radius);
@@ -38,63 +79,48 @@
 
     z-index: 1;
 
-    color: var(--theme-blind-header-closed--color);
-    background-color: var(--theme-blind-header-closed--background);
-
     .collapse-icon {
-      color: var(--theme-blind-header-icon-closed--color);
       padding: $tiny-space $small-space;
     }
 
-    ix-typography,
-    .blind-header-title-label,
-    .blind-header-title-sublabel {
-      @include ellipsis;
+    .blind-header-title-col {
       flex-grow: 1;
+      flex-basis: 0;
+      display: inline-flex;
+      align-items: center;
+      min-width: 0;
+    }
+
+    ix-typography {
+      flex-grow: 1;
+      @include ellipsis;
+    }
+
+    .blind-header-title-col:not(:first-of-type) {
+      justify-content: flex-end;
     }
 
     .blind-header-title-label {
+      @include ellipsis;
       padding-inline-end: 0.5rem;
     }
 
     .blind-header-title-sublabel {
+      @include ellipsis;
       padding-inline: 0.5rem;
     }
 
     .blind-header-title,
     .blind-header-title-basic {
-      @include ellipsis;
       display: flex;
       align-items: center;
       flex-grow: 1;
       height: 100%;
-
-      .blind-header-title-default {
-        @include ellipsis;
-        @include text-l-title;
-        margin-inline-end: $small-space;
-        flex-grow: 1;
-      }
+      min-width: 0;
     }
 
     .blind-header-title-basic ix-icon {
       margin-inline-end: $small-space;
-    }
-
-    @include hover {
-      background-color: var(--theme-blind-header-open--background--hover);
-
-      .collapse-icon {
-        color: var(--theme-blind-header-icon-open--color--hover);
-      }
-    }
-
-    @include active {
-      background-color: var(--theme-blind-header-open--background--active);
-
-      .collapse-icon {
-        color: var(--theme-blind-header-icon-open--color--active);
-      }
     }
 
     @include focus-visible {
@@ -104,22 +130,12 @@
 
     &.closed {
       border-radius: var(--theme-blind--border-radius);
+    }
 
-      @include hover {
-        background-color: var(--theme-blind-header-open--background--hover);
-
-        .collapse-icon {
-          color: var(--theme-blind-header-icon-closed--color--hover);
-        }
-      }
-
-      @include active {
-        background-color: var(--theme-blind-header-open--background--active);
-
-        .collapse-icon {
-          color: var(--theme-blind-header-icon-closed--color--active);
-        }
-      }
+    .blind-header-labels {
+      display: inline-flex;
+      flex-grow: 1;
+      min-width: 0;
     }
   }
 
@@ -136,4 +152,21 @@
       padding-bottom: 0px;
     }
   }
+}
+
+$blind-variants: (
+  alarm,
+  critical,
+  info,
+  insight,
+  neutral,
+  notification,
+  success,
+  warning,
+  primary,
+  outline
+);
+
+@each $variant in $blind-variants {
+  @include blind($variant);
 }
