--- a/packages/core/src/components/blind/blind.scss
+++ b/packages/core/src/components/blind/blind.scss
@@ -14,6 +14,10 @@
 
 @mixin blind($variant: 'insight') {
   :host(.blind-#{$variant}) {
+    @if $variant == 'outline' {
+      border: solid var(--theme-blind--border-thickness) var(--theme-blind-base--border-color);
+    }
+
     .blind-header {
       @if $variant == 'outline' {
         background-color: var(--theme-color-ghost);
@@ -57,8 +61,6 @@
 :host {
   display: flex;
   flex-direction: column;
-  border: solid var(--theme-blind--border-thickness)
-    var(--theme-blind-base--border-color);
   border-radius: var(--theme-blind--border-radius);
   overflow: hidden;
 
@@ -74,7 +76,6 @@
     border-radius: var(--theme-blind--border-radius)
       var(--theme-blind--border-radius) 0 0;
     padding-right: $small-space;
-    transition: border-radius $default-time;
     cursor: pointer;
 
     z-index: 1;
@@ -126,10 +127,6 @@
     @include focus-visible {
       border-color: var(--theme-color-focus-bdr);
       outline: none;
-    }
-
-    &.closed {
-      border-radius: var(--theme-blind--border-radius);
     }
 
     .blind-header-labels {
