docs: fix icons in homepage

--- a/packages/documentation/src/pages/index.module.scss
+++ b/packages/documentation/src/pages/index.module.scss
@@ -40,9 +40,24 @@
       margin-left: 24px;
     }
 
+    .scroll_down {
+      position: absolute;
+      left: 47%;
+      right: 50%;
+      bottom: 40px;
+      text-decoration: none !important;
+      animation-duration: 10s;
+      width: 4rem;
+      height: 4rem;
+
+      ix-icon {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
     @media (max-width: 768px) {
       .scroll_down {
-        font-size: 4rem !important;
         left: 49% !important;
       }
     }
@@ -60,16 +75,6 @@
       .logo {
         margin-left: 0 !important;
       }
-    }
-
-    .scroll_down {
-      position: absolute;
-      font-size: 5rem;
-      left: 47%;
-      right: 50%;
-      bottom: 40px;
-      text-decoration: none !important;
-      animation-duration: 10s;
     }
   }
 
@@ -306,12 +311,16 @@
     .icon_main {
       position: absolute;
       z-index: 1;
+      width: 4rem;
+      height: 4rem;
     }
 
     .icon_shadow {
       margin-left: 10px;
       margin-top: -20px;
       color: #000;
+      width: 4rem;
+      height: 4rem;
     }
 
     @media (max-width: 1024px) {
@@ -330,11 +339,31 @@
       .text_2 {
         width: 340px !important;
       }
+
+      .icon_main {
+        width: 2rem;
+        height: 2rem;
+      }
+
+      .icon_shadow {
+        width: 2rem;
+        height: 2rem;
+      }
     }
 
     @media (max-width: 428px) {
       .images {
         gap: 10px !important;
+      }
+
+      .icon_main {
+        width: 1rem;
+        height: 1rem;
+      }
+
+      .icon_shadow {
+        width: 1rem;
+        height: 1rem;
       }
     }
   }
@@ -510,11 +539,11 @@
         display: flex;
         flex-direction: row;
         gap: 31px;
-      }
-    }
 
-    i {
-      font-size: 7rem;
+        ix-icon {
+          transform: scale(3.5);
+        }
+      }
     }
 
     .hidden {
@@ -944,7 +973,8 @@
     }
 
     .Icon {
-      font-size: 5rem;
+      width: 3rem;
+      height: 3rem;
 
       &.Primary {
         color: black;
