--- a/packages/documentation/static/code-runtime/angular/src/styles.css
+++ b/packages/documentation/static/code-runtime/angular/src/styles.css
@@ -1,3 +1,2 @@
 /* You can add global styles to this file, and also import other style files */
-@import "@siemens/ix/dist/siemens-ix/siemens-ix.css";
-@import "@siemens/ix-icons/dist/css/ix-icons.css";
+@import '@siemens/ix/dist/siemens-ix/siemens-ix.css';
