feat(core/styles): load input styles global

--- a/packages/core/scss/_core.scss
+++ b/packages/core/scss/_core.scss
@@ -31,6 +31,7 @@
 @import 'legacy/components/button-group';
 @import 'legacy/components/dropdown';
 @import 'legacy/components/forms';
+@import './components/form/input';
 @import './components/links';
 @import './components/checkboxes';
 @import './components/radiobuttons';
