--- a/packages/core/src/components/date-time-card/date-time-card.scss
+++ b/packages/core/src/components/date-time-card/date-time-card.scss
@@ -22,6 +22,12 @@
     display: flex;
     flex-direction: column;
 
+    &.standaloneAppearance {
+      box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.1), 0 4px 8px 0 rgba(0, 0, 0, 0.1),
+        0 12px 18px 0px rgba(0, 0, 0, 0.1);
+      border-radius: 4px;
+    }
+
     &.rounded {
       border-radius: 4px;
     }
