feat(core/timepicker): responsive behavior

--- a/packages/core/src/components/datetime-picker/datetime-picker.scss
+++ b/packages/core/src/components/datetime-picker/datetime-picker.scss
@@ -17,12 +17,35 @@
   background-color: var(--theme-menu--background);
   border-radius: 4px;
   position: relative;
-  width: 32.6875rem;
+  width: 352px;
 
   .flex {
     display: flex;
     justify-content: center;
+    flex-direction: column;
   }
+
+  @media (min-width: 32.6875rem) {
+    width: 32.6875rem;
+
+    .flex-md-row {
+      flex-direction: row;
+    }
+
+    .btn-select-date {
+      left: unset !important;
+    }
+
+    .separator-md {
+      border: 1px solid var(--theme-datepicker-separator--background);
+      width: 100%;
+      margin-top: 72px;
+      height: 1px;
+    }
+
+  }
+
+
 
   .individual {
     box-shadow: none;
@@ -33,12 +56,8 @@
     position: absolute;
     bottom: $default-space;
     right: $default-space;
+    left: $default-space;
   }
 
-  .separator {
-    border: 1px solid var(--theme-datepicker-separator--background);
-    width: 100%;
-    margin-top: 72px;
-    height: 1px;
-  }
+
 }
