feat(core/timepicker): fixes responsive behavior, fixes time-picker logic

--- a/packages/core/src/components/time-picker/time-picker.scss
+++ b/packages/core/src/components/time-picker/time-picker.scss
@@ -16,7 +16,7 @@
 
   @import 'legacy/components/forms';
 
-  @media (min-width: 32.6875rem) {
+  @media (min-width: 576px) {
     .clock {
       padding: 4.25rem 0;
     }
