--- a/packages/core/src/components/datetime-picker/datetime-picker.scss
+++ b/packages/core/src/components/datetime-picker/datetime-picker.scss
@@ -17,7 +17,8 @@
   background-color: var(--theme-menu--background);
   border-radius: 4px;
   position: relative;
-  width: 352px;
+  width: max-content;
+  max-width: 576px;
 
   .flex {
     display: flex;
@@ -25,8 +26,7 @@
     flex-direction: column;
   }
 
-  @media (min-width: 32.6875rem) {
-    width: 32.6875rem;
+  @media (min-width: 576px) {
 
     .flex-md-row {
       flex-direction: row;
