--- a/packages/react-test-app/src/preview-examples/grid.css
+++ b/packages/react-test-app/src/preview-examples/grid.css
@@ -2,15 +2,20 @@
   margin-bottom: 1rem;
 }
 
-.ExampleGrid ix-col {
-  background-color: var(--theme-color-primary);
-  border: var(--theme-std-bdr-2);
-  text-align: center;
-  color: var(--theme-color-inv-contrast-text);
+.ExampleGrid ix-col ix-typography {
+  display: flex;
+  padding: 0.5rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex: 1 0 0;
+  align-self: stretch;
+  border: 1px solid var(--theme-color-soft-bdr);
+  background: var(--theme-color-ghost);
+  border-radius: 3px;
 }
-
 .example-parent {
   padding-top: 1rem;
   padding-bottom: 0.25rem;
-  background-color: var(--theme-color-info-40);
+  background-color: var(--theme-color-ghost--hover);
 }
