--- a/packages/core/src/components/col/col.scss
+++ b/packages/core/src/components/col/col.scss
@@ -6,19 +6,19 @@
  * This source code is licensed under the MIT license found in the
  * LICENSE file in the root directory of this source tree.
  */
+@import 'mixins/shadow-dom/component';
 
 :host {
-  box-sizing: border-box;
-
+  @include ix-component;
   position: relative;
-
   flex-basis: 0;
   flex-grow: 1;
-
   width: 100%;
   max-width: 100%;
   min-height: 1px;
 
+  padding-top: calc(var(--ix-layout-grid-gutter) * 0.5);
+  padding-bottom: calc(var(--ix-layout-grid-gutter) * 0.5);
   padding-left: calc(var(--ix-layout-grid-gutter) * 0.5);
   padding-right: calc(var(--ix-layout-grid-gutter) * 0.5);
 }
