--- a/packages/core/src/components/validation-tooltip/validation-tooltip.scss
+++ b/packages/core/src/components/validation-tooltip/validation-tooltip.scss
@@ -14,6 +14,7 @@
   display: inline-block;
   position: relative;
   $padding: 5px;
+  width: 100%;
 
   .validation-tooltip {
     background-color: var(--theme-tootlip--background);
