--- a/packages/core/src/components/col/col.scss
+++ b/packages/core/src/components/col/col.scss
@@ -17,8 +17,5 @@
   max-width: 100%;
   min-height: 1px;
 
-  padding-top: calc(var(--ix-layout-grid-gutter) * 0.5);
-  padding-bottom: calc(var(--ix-layout-grid-gutter) * 0.5);
-  padding-left: calc(var(--ix-layout-grid-gutter) * 0.5);
-  padding-right: calc(var(--ix-layout-grid-gutter) * 0.5);
+  padding: calc(var(--ix-layout-grid-gutter) * 0.5);
 }
